# Bakalarka

./: .gitignore  Otazky_a_poznámky.txt  build.py  entity_definition.docx  program_diagram.drawio  requirements-dev.txt  requirements.txt  setup.cfg  vysledky.xlsx
src/isa/: main.py
src/isa/paraphrasing/: paraphrasing.py
src/isa/stt/: speech_to_text.py
src/isa/tts/: text_to_speech.py
src/isa/ui/: dashboard.py  load_from_file.py  main_frame.py  recording.py
src/isa/ui/themes/: dark.tcl
