[metadata]

name = Integrated system for automating lecture recording, editing and publishing
description = No description.
author = Martin Reich
author_email = reichm@students.zcu.cz

long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Programming Language :: Python :: 3.10


[tool:pybuilder]

default_task =
    analyze
    publish
    clean

distutils_commands =
    sdist
;    bdist_egg
    bdist_wheel

copy_resources_glob =
    requirements*.txt
    setup.cfg
    MANIFEST.in
    README.md
    LICENSE

; MUST use '/' as a path separator
cython_include_modules =
    ${metadata:name}/**/*.py

; MUST use '/' as a path separator
cython_exclude_modules =
    **/__init__.py

cython_remove_python_sources = yes

[tool:pybuilder.cython_compiler_directives]
language_level = 3

[tool:pytest]
addopts = --color yes --code-highlight yes
coverage_html = true
filterwarnings = ignore:Unknown config option:pytest.PytestConfigWarning

[tool:setuptools_scm]
version_scheme = release-branch-semver

; [coverage:report]
; fail_under = 75

[flake8]
docstring-convention = google
max-line-length = 120
inline-quotes = "
exclude =
    __init__.py
extend-ignore =
    DAR203

[darglint]
strictness = short
